force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/ucinn_ascendv2__Designation_Beneficiary__c.object-meta.xml
<CustomObject>
    <description>Recipient of the endowed funds - scholarship, professorship, chairmanship etc.</description>
    <label>Designation Beneficiary</label>
    <nameField>
        <label>Designation Beneficiary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Designation Beneficiaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>