force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/fields/College_Hosted__c.field-meta.xml
<CustomField>
    <fullName>College_Hosted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>College Hosted</label>
    <type>Checkbox</type>
</CustomField>