force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/fields/Convocation_Date__c.field-meta.xml
<CustomField>
    <fullName>Convocation_Date__c</fullName>
    <label>Convocation Date</label>
    <type>Date</type>
</CustomField>