force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/fields/Designation_Name__c.field-meta.xml
<CustomField>
    <fullName>Designation_Name__c</fullName>
    <formula>ucinn_ascendv2__Designation__r.ucinn_ascendv2__Designation_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designation Name</label>
    <type>Text</type>
</CustomField>