force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/fields/Donor_Medallion__c.field-meta.xml
<CustomField>
    <fullName>Donor_Medallion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donor Medallion</label>
    <type>Checkbox</type>
</CustomField>