force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/fields/Inaugural_Holder__c.field-meta.xml
<CustomField>
    <fullName>Inaugural_Holder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inaugural Holder</label>
    <type>Checkbox</type>
</CustomField>