force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/fields/Medallion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Medallion_Notes__c</fullName>
    <label>Medallion Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>