force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/fields/Medallion_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Medallion_Ordered_Date__c</fullName>
    <label>Medallion Ordered Date</label>
    <type>Date</type>
</CustomField>