force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/fields/Report_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_1_Date__c</fullName>
    <label>Report 1 Date</label>
    <type>Date</type>
</CustomField>