force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/fields/Report_2_Completed__c.field-meta.xml
<CustomField>
    <fullName>Report_2_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report 2 Completed</label>
    <type>Checkbox</type>
</CustomField>