force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/fields/ucinn_ascendv2__Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_Remaining__c</fullName>
    <formula>ucinn_ascendv2__Amount__c - ucinn_ascendv2__Amount_Utilized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>