force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/fields/ucinn_ascendv2__Amount_Utilized__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_Utilized__c</fullName>
    <label>Amount Utilized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>