force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/fields/ucinn_ascendv2__Comments__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Comments__c</fullName>
    <inlineHelpText>Comments specific to Beneficiary for a given FY</inlineHelpText>
    <label>Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>