force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/fields/ucinn_ascendv2__Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation__c</fullName>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Designation Beneficiaries</relationshipLabel>
    <relationshipName>Designation_Beneficiaries_Designation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>