force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/fields/ucinn_ascendv2__Designation_Beneficiary_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_Beneficiary_Name_Auto_Number__c</fullName>
    <displayFormat>DB-{0000000}</displayFormat>
    <label>Designation Beneficiary Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>