force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/fields/ucinn_ascendv2__Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fiscal_Year__c</fullName>
    <inlineHelpText>Academic Year July 1 to June 30</inlineHelpText>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Fiscal_Year</valueSetName>
    </valueSet>
</CustomField>