force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/listViews/All_Named_Faculty_Positions.listView-meta.xml
<ListView>
    <fullName>All_Named_Faculty_Positions</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Designation_Name__c</columns>
    <columns>ucinn_ascendv2__Designation__c</columns>
    <columns>ucinn_ascendv2__Start_Date__c</columns>
    <columns>ucinn_ascendv2__End_Date__c</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Contact__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Designation_Name__c</field>
        <operation>contains</operation>
        <value>Artz</value>
    </filters>
    <label>All Named Faculty Positions</label>
</ListView>