force-app/main/default/objects/ucinn_ascendv2__Designation_Beneficiary__c/listViews/Faculty_Positions.listView-meta.xml
<ListView>
    <fullName>Faculty_Positions</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Designation_Name__c</columns>
    <columns>ucinn_ascendv2__Designation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Contact__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Designation_Name__c</field>
        <operation>contains</operation>
    </filters>
    <label>Faculty Positions</label>
</ListView>